...
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/button_2_clicked"
            android:onClick="bottomMenuClickAnalyticsActivity"/>

        <ImageView
            android:id="@+id/button3AnalyticsActivity"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@drawable/button_3"
            android:onClick="bottomMenuClickAnalyticsActivity"/>

...
