...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline5"
            app:layout_constraintWidth_percent="0.7" />

        <Button
            android:id="@+id/containedButton"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="28dp"
            android:background="@drawable/button_background"
...
