...
            android:id="@+id/button1MainActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_1_clicked" />

        <ImageView
            android:id="@+id/button2MainActivity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/button_2"
            android:onClick="bottomMenuClick"/>

        <ImageView
...
